--- a/index.html
+++ b/index.html
@@ -3,15 +3,102 @@
   <head>
     <meta charset="utf-8">
     <title>Tendance étudiante</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     </head>
 
 <body>
-<header>
+
+
+<header class="block-header">
+
+  <img src="baniere.png" class="baniere" alt="baniere tendances etudiantes"/>
+
+  <div class="inner">
+
+  <div class="reseaux">
+
+      <img src="icon/instagram.png" class="insta" alt="logo instagram">
+
+      <img src="icon/facebook.png" class="facebook" alt="logo facebook">
+
+      <img src="icon/twitter.png" class="twitter" alt="logo twitter">
+  </div>
+
+
+  <div class="recherche">
+    <p>Recherche</p>
+      <img src="icon/loupe.png" class="loupe" alt="loupe pour recherche">
+  </div>
+
+</div>
+
+
 </header>
-<nav>
+
+
+
+
+
+<nav class="block-nav">
+
 </nav>
-<footer>
+
+
+<div class="block-center">
+
+<p>
+Traductions: Pouvez-vous nous aider en traduisant ce site dans des langues étrangères? Envoyez-nous un courrier électronique avec les détails si vous pouvez aider.
+Un pack de bannières est désormais disponible ici en trois couleurs et dans diverses tailles standard:
+BannersBannersBanners
+Donations: Si vous utiliser fréquemment ce site et voulez l'aider à continuer sur Internet, pensez à une donation d'une somme minime pour nous aider à payer l'hébergement et la bande passante. Il n'y a pas de minimum de donation, et toute somme sera appréciée - cliquez ici pour donner en utilisant Paypal. Nous vous remercions de votre soutien.
+Chrome Firefox Add-on NodeJS TeX Package Python Interface GTK Lipsum Rails .NET Groovy Adobe Plugin
+Le passage de Lorem Ipsum standard, utilisé depuis 1500
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+
+Section 1.10.32 du "De Finibus Bonorum et Malorum" de Ciceron (45 av. J.-C.)
+"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+
+Traduction de H. Rackham (1914)
+"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because
+</p>
+
+</div>
+
+
+
+
+<footer class="block-footer">
+
+<div class= "main">
+<div class="inner">
+
+    <p><a href="#" class="Mentions">Mentions légales</a></p>
+
+    <p>-</p>
+
+    <p><a href="#" class="Plan">Plan du site</a></p>
+
+    <p>-</p>
+
+    <p><a href="#" class="Contact">Contact</a></p>
+
+    <p>-</p>
+
+    <p><a href="#" class="Newsletter">Newsletter</a></p>
+
+</div>
+</div>
+
 </footer>
+
+
+
+
 </body>
+
+
+
+
+
 </html>
